@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2007-06-07 05:11:42 $ $Revision: 1.9 $
+\  $Date: 2007-06-08 06:28:29 $ $Revision: 1.10 $
 \
 \ ==============================================================================
 \
@@ -46,22 +46,27 @@ s" floating-ext" environment? 2drop
 
 ( Private words )
    
-variable sys.endian   1 sys.endian !
+variable ffl.endian   1 ffl.endian !
 
 
 ( System Settings )
 
-create sys.eol     ( - c-addr = Counted string for the end of line for the current system )
+create end-of-line   ( - c-addr = Counted string for the end of line for the current system )
   1 c, 10 c,         \ unix: lf
 \ 2 c, 13 c, 10 c,   \ dos:  cr lf
 
-8                           constant sys.bits-in-byte   ( - n = Number of bits in a byte )
 
-sys.bits-in-byte 1 chars *  constant sys.bits-in-char   ( - n = Number of bits in a char )
+s" ADDRESS-UNIT-BITS" environment? 0= [IF] 8 [THEN] 
+  constant #bits/byte   ( - n = Number of bits in a byte )
   
-sys.bits-in-byte 1 cells *  constant sys.bits-in-cell   ( - n = Number of bits in a cell )  
+#bits/byte 1 chars *
+  constant #bits/char   ( - n = Number of bits in a char )
+  
+#bits/byte cell *
+  constant #bits/cell   ( - n = Number of bits in a cell )  
 
-sys.endian c@ 0=            constant sys.bigendian      ( - f = Check for bigendian hardware )
+ffl.endian c@ 0=             
+  constant bigendian?   ( - f = Check for bigendian hardware )
 
 
 ( Extension words )
@@ -97,14 +102,14 @@ s" MAX-U" environment? drop constant max-ms@    ( - ud = Maximum value of the mi
 
 : lroll            ( u1 u - u2 = Rotate u1 u bits to the left )
   2dup lshift >r
-  sys.bits-in-cell swap - rshift r>
+  #bits/cell swap - rshift r>
   or
 ;
 
 
 : rroll            ( u1 u - u2 = Rotate u1 u bits to the right )
   2dup rshift >r
-  sys.bits-in-cell swap - lshift r>
+  #bits/cell swap - lshift r>
   or
 ;
 
@@ -152,6 +157,15 @@ s" MAX-U" environment? drop constant max-ms@    ( - ud = Maximum value of the mi
 
 : nil<>            ( w - f = Check for unequal to nil )
   nil <>
+;
+
+
+: ?free            ( addr - = Free the address [and throw] if not nil )
+  dup nil<> IF
+    free throw
+  ELSE
+    drop
+  THEN
 ;
 
 
